--- a/src/static/index.html
+++ b/src/static/index.html
@@ -1,86 +1,66 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Qwen-TTS Podcast Studio</title>
     <link rel="stylesheet" href="/static/style.css">
 </head>
-
 <body>
     <div class="dashboard">
         <!-- Column 1: Speaker Library -->
         <div class="column">
-            <div class="header" style="display:flex; justify-content:space-between; align-items:center;">
+            <div class="header">
                 <h2>Speaker Library</h2>
                 <a href="/static/studio.html" class="btn btn-secondary btn-sm" style="text-decoration:none">Studio</a>
             </div>
             <div class="scroll-area" id="speakers-list">
                 <!-- Dynamic cards -->
             </div>
-            <div style="padding: 16px;">
-                <a href="/static/studio.html" class="btn btn-secondary"
-                    style="display:block; text-align:center; text-decoration:none">+ Create Voice</a>
+            <div style="padding: 20px; border-top: 1px solid var(--border);">
+                <a href="/static/studio.html" class="btn btn-secondary" style="display:flex; width:100%; text-decoration:none">+ Create Voice</a>
             </div>
         </div>
 
         <!-- Column 2: Story Canvas -->
-        <div class="column-main">
+        <div class="column" style="flex: 2.5;">
             <div class="canvas-header">
                 <h1>Story Canvas</h1>
                 <div class="header-actions">
-                    <select id="project-select" class="btn btn-secondary" style="margin-right:0px; max-width: 150px;">
+                    <select id="project-select" class="btn btn-secondary btn-sm" style="max-width: 140px;">
                         <option value="">(New Project)</option>
                     </select>
-                    <button class="btn btn-secondary" onclick="loadProject()">Load</button>
-                    <button class="btn btn-secondary" onclick="saveProject()">Save</button>
-                    <div
-                        style="width:1px; background:var(--border); height:24px; margin:0 8px; display:inline-block; vertical-align:middle;">
-                    </div>
-                    <button class="btn btn-secondary" onclick="toggleView('draft')">Draft</button>
-                    <button class="btn btn-secondary" onclick="toggleView('prod')">Production</button>
-                    <button class="btn btn-primary" onclick="promoteToProduction()">Promote</button>
-                    <button class="btn btn-secondary" id="batch-btn" onclick="batchSynthesize()">Batch Synth</button>
+                    <button class="btn btn-secondary btn-sm" onclick="loadProject()">Load</button>
+                    <button class="btn btn-secondary btn-sm" onclick="saveProject()">Save</button>
+                    <div style="width:1px; background:var(--border); height:20px; margin:0 4px;"></div>
+                    <button class="btn btn-secondary btn-sm" onclick="toggleView('draft')">Draft</button>
+                    <button class="btn btn-secondary btn-sm" onclick="toggleView('prod')">Production</button>
+                    <button class="btn btn-primary btn-sm" onclick="promoteToProduction()">Promote</button>
                 </div>
             </div>
 
-            <div id="draft-view">
-                <p style="color: var(--text-secondary); font-size: 0.875rem; margin-bottom: 8px;">Format:
-                    <code>[Role]: Text to say...</code>
-                </p>
-                <textarea id="script-editor" placeholder="[Narrator]: Welcome to the show.
-[Guest]: Glad to be here!"></textarea>
+            <div id="draft-view" style="flex:1; display:flex; flex-direction:column;">
+                <textarea id="script-editor" placeholder="[Ryan]: Hello! Write your script here..."></textarea>
             </div>
 
-            <div id="prod-view" style="display:none;">
+            <div id="prod-view" style="display:none; flex:1; flex-direction:column; overflow:hidden;">
                 <!-- Timeline UI -->
-                <div id="timeline-container"
-                    style="background:var(--bg-card); padding:16px; margin-bottom:16px; border-radius:8px; border:1px solid var(--border);">
-                    <div id="waveform" style="margin-bottom: 10px;"></div>
+                <div id="timeline-container" style="padding:20px; border-bottom:1px solid var(--border); background: rgba(0,0,0,0.1);">
+                    <div id="waveform" style="margin-bottom: 10px; height: 100px;"></div>
                     <div id="waveform-timeline"></div>
                 </div>
 
                 <div id="blocks-container" class="scroll-area">
-                    <!-- Dynamic Blocks Here -->
-                    <div class="empty-state">
-                        <p>No production blocks yet.</p>
-                        <p style="font-size:0.8rem;">Write in Draft mode then 'Promote' it.</p>
-                    </div>
+                    <!-- Dynamic Blocks -->
                 </div>
             </div>
 
-            <!-- Scripts -->
-            <script src="/static/libs/wavesurfer.min.js"></script>
-            <script src="/static/libs/wavesurfer-regions.min.js"></script>
-            <script src="/static/libs/wavesurfer-timeline.min.js"></script>
-            <script src="/static/shared.js"></script>
-            <script src="/static/timeline.js"></script>
-            <script src="/static/app.js"></script>
-
-            <div style="margin-top: auto; padding: 16px; border-top: 1px solid var(--border);">
-                <div class="status-msg" id="status-msg" style="margin-bottom: 12px;">Ready</div>
-                <audio id="audio-player" controls style="width: 100%; border-radius: 8px;"></audio>
+            <div style="margin-top: auto; padding: 20px; border-top: 1px solid var(--border); background: rgba(255,255,255,0.01);">
+                <div style="display:flex; align-items:center; margin-bottom: 12px;">
+                    <div id="heartbeat-dot" class="heartbeat-dot"></div>
+                    <div class="status-msg" id="status-msg" style="font-size: 0.9rem; font-weight: 500;">Ready</div>
+                </div>
+                <audio id="audio-player" controls style="width: 100%; height: 40px;"></audio>
             </div>
         </div>
 
@@ -89,11 +69,11 @@
             <div class="header">
                 <h2>Production</h2>
             </div>
-            <div class="production-controls">
+            <div class="scroll-area">
                 <div class="control-group">
-                    <span class="label">Atmospheric Mood (BGM)</span>
-                    <select class="btn btn-secondary" id="bgm-select" style="text-align: left;">
-                        <option value="">None</option>
+                    <span class="label">Atmospheric Mood</span>
+                    <select class="btn btn-secondary" id="bgm-select" style="width:100%; text-align: left;">
+                        <option value="">None (Voice Only)</option>
                         <option value="mystery">Ambient Mystery</option>
                         <option value="tech">Tech Newsroom</option>
                         <option value="joy">Joyful Morning</option>
@@ -101,39 +81,28 @@
                     </select>
                 </div>
 
-                <div class="control-group">
-                    <button class="btn" id="generate-btn" onclick="generatePodcast()"
-                        style="padding: 16px; font-size: 1rem;">
-                        Produce Final Podcast
+                <div style="margin-top: 30px;">
+                    <button class="btn btn-primary" id="generate-btn" onclick="generatePodcast()" style="width:100%; padding: 20px; font-weight: 700; font-size: 1rem;">
+                        ⚡ PRODUCE FINAL PODCAST
                     </button>
                 </div>
 
-                <div id="progress-container" style="display: none;">
-                    <span class="label">Stitching segments...</span>
-                    <!-- Progress bar could go here -->
+                <div class="control-group" style="margin-top: 24px;">
+                    <span class="label">Shortcuts</span>
+                    <button class="btn btn-secondary btn-sm" id="batch-btn" onclick="batchSynthesize()" style="width:100%; margin-bottom: 8px;">
+                        Synthesize All Pending Blocks
+                    </button>
                 </div>
             </div>
         </div>
     </div>
 
-    <!-- Voice Studio Modal (Hidden by default) -->
-    <div id="voice-modal"
-        style="display:none; position:fixed; top:0; left:0; width:100%; height:100%; background:rgba(0,0,0,0.8); z-index:100; align-items:center; justify-content:center;">
-        <div
-            style="background:var(--bg-card); padding:24px; border-radius:12px; width:400px; border:1px solid var(--border);">
-            <h2 id="modal-title">Create Voice</h2>
-            <div id="modal-content"></div>
-            <div style="margin-top:20px; display:flex; gap:10px;">
-                <button class="btn" id="modal-save">Save</button>
-                <button class="btn btn-secondary" onclick="closeModal()">Cancel</button>
-            </div>
-        </div>
-    </div>
-
-        <div class="dashboard">
-
-            <!-- Column 1: Speaker Library -->
-
-            <div class="column">
-
-    
+    <!-- Scripts -->
+    <script src="/static/libs/wavesurfer.min.js"></script>
+    <script src="/static/libs/wavesurfer-regions.min.js"></script>
+    <script src="/static/libs/wavesurfer-timeline.min.js"></script>
+    <script src="/static/shared.js"></script>
+    <script src="/static/timeline.js"></script>
+    <script src="/static/app.js"></script>
+</body>
+</html>
