feat: cinematic video generation and market-friendly UI redesign
- Implemented `VideoEngine` using MoviePy and Pillow for professional video story generation.
- Added support for timed subtitles, Ken Burns zoom effects, and dual aspect ratios (16:9, 9:16).
- Redesigned the UI with a "market-friendly" professional SaaS aesthetic, removing glassmorphism.
- Added character-aligned image management and uploads.
- Integrated asynchronous task processing with real-time progress updates.
- Added a comprehensive test suite for video engine and API.
- Refactored `app.js` and `video_engine.py` for maintainability.

--- a/src/static/index.html
+++ b/src/static/index.html
@@ -200,7 +200,7 @@ Bob: Hi Alice, how are you today?"></textarea>
                             </select>
                         </div>
 
-                        <button class="btn btn-primary" style="width:100%; padding:20px;" onclick="generatePodcast()">
+                        <button class="btn btn-primary" style="width:100%; padding:20px;" onclick="generatePodcast(this)">
                             <i class="fas fa-microphone"></i> PRODUCE FINAL
                         </button>
 
@@ -233,7 +233,7 @@ Bob: Hi Alice, how are you today?"></textarea>
                                 <span class="label" style="margin:0;">Include Subtitles</span>
                             </label>
                         </div>
-                        <button class="btn btn-secondary" style="width:100%; padding:12px;" onclick="generateVideo()">
+                        <button class="btn btn-secondary" style="width:100%; padding:12px;" onclick="generateVideo(this)">
                             <i class="fas fa-video"></i> GENERATE VIDEO
                         </button>
                     </div>
