--- a/src/static/index.html
+++ b/src/static/index.html
@@ -51,18 +51,18 @@
                     <div class="card">
                         <h2 style="margin-bottom:16px; font-size: 1.2rem;">Voice Design</h2>
                         <div class="control-group">
-                            <span class="label">Style Prompt</span>
+                            <label class="label" for="design-prompt">Style Prompt</label>
                             <textarea id="design-prompt" placeholder="A calm, soothing female voice with a slight British accent..." style="height: 80px;"></textarea>
                         </div>
 
                         <div class="sliders">
                             <div class="slider-item">
-                                <span class="label">Gender</span>
+                                <label class="label" for="design-gender" style="margin-bottom:0; width:60px;">Gender</label>
                                 <input type="range" id="design-gender" min="0" max="100" value="50">
                                 <span style="font-size:0.8rem; width:50px; text-align:right;">M / F</span>
                             </div>
                             <div class="slider-item">
-                                <span class="label">Age</span>
+                                <label class="label" for="design-age" style="margin-bottom:0; width:60px;">Age</label>
                                 <input type="range" id="design-age" min="0" max="100" value="30">
                                 <span style="font-size:0.8rem; width:50px; text-align:right;">Young / Old</span>
                             </div>
@@ -85,7 +85,7 @@
                     <div class="card">
                         <h2 style="margin-bottom:16px; font-size: 1.2rem;">Voice Cloning</h2>
                         <div class="control-group">
-                            <span class="label">Reference Audio</span>
+                            <label class="label">Reference Audio</label>
                             <div style="display:grid; grid-template-columns: 1fr 1fr; gap:12px;">
                                 <button class="btn btn-secondary" onclick="document.getElementById('clone-file').click()">
                                     <i class="fas fa-upload"></i> Upload
@@ -115,14 +115,16 @@
                     <div class="card">
                         <h2 style="margin-bottom:16px; font-size: 1.2rem;">Voice Lab (Mixer)</h2>
                         <div class="control-group">
-                            <span class="label">Base Voice A</span>
+                            <label class="label" for="mix-voice-a">Base Voice A</label>
                             <select id="mix-voice-a" class="btn btn-secondary btn-sm" style="width:100%"></select>
-                            <input type="range" id="mix-weight-a" min="0" max="100" value="50" style="margin-top:8px; width:100%">
+                            <label class="label" for="mix-weight-a" style="margin-top:8px; font-size:0.65rem;">Weight A</label>
+                            <input type="range" id="mix-weight-a" min="0" max="100" value="50" style="width:100%">
                         </div>
                         <div class="control-group">
-                            <span class="label">Base Voice B</span>
+                            <label class="label" for="mix-voice-b">Base Voice B</label>
                             <select id="mix-voice-b" class="btn btn-secondary btn-sm" style="width:100%"></select>
-                            <input type="range" id="mix-weight-b" min="0" max="100" value="50" style="margin-top:8px; width:100%">
+                            <label class="label" for="mix-weight-b" style="margin-top:8px; font-size:0.65rem;">Weight B</label>
+                            <input type="range" id="mix-weight-b" min="0" max="100" value="50" style="width:100%">
                         </div>
                         <button class="btn btn-primary" style="width:100%;" onclick="testVoiceMix(this)">
                             <i class="fas fa-flask"></i> Mix & Preview
@@ -190,7 +192,7 @@ Bob: Hi Alice, how are you today?"></textarea>
                     <div class="card sidebar-controls">
                         <span class="label">Production Settings</span>
                         <div class="control-group">
-                            <span class="label">BGM Mood</span>
+                            <label class="label" for="bgm-select">BGM Mood</label>
                             <select id="bgm-select">
                                 <option value="">None</option>
                                 <option value="mystery">Mystery</option>
@@ -200,7 +202,7 @@ Bob: Hi Alice, how are you today?"></textarea>
                             </select>
                         </div>
 
-                        <button class="btn btn-primary" style="width:100%; padding:20px;" onclick="generatePodcast()">
+                        <button class="btn btn-primary" style="width:100%; padding:20px;" onclick="generatePodcast(this)">
                             <i class="fas fa-microphone"></i> PRODUCE FINAL
                         </button>
 
@@ -223,14 +225,14 @@ Bob: Hi Alice, how are you today?"></textarea>
                     <div class="card">
                         <h2 style="margin-bottom:16px; font-size: 1.1rem;">Dubbing (Translation)</h2>
                         <div class="control-group">
-                            <span class="label">Source File</span>
+                            <label class="label">Source File</label>
                             <button class="btn btn-secondary" style="width:100%" onclick="document.getElementById('dub-file').click()">
                                 <i class="fas fa-file-video"></i> Upload File
                             </button>
                             <input type="file" id="dub-file" accept="video/*,audio/*" style="display:none">
                         </div>
                         <div class="control-group">
-                            <span class="label">Target Language</span>
+                            <label class="label" for="dub-lang">Target Language</label>
                             <select id="dub-lang">
                                 <option value="en">English</option>
                                 <option value="zh">Chinese</option>
@@ -238,7 +240,7 @@ Bob: Hi Alice, how are you today?"></textarea>
                                 <option value="es">Spanish</option>
                             </select>
                         </div>
-                        <button class="btn btn-primary" style="width:100%" onclick="startDubbing()">
+                        <button class="btn btn-primary" style="width:100%" onclick="startDubbing(this)">
                             <i class="fas fa-magic"></i> Start Dubbing
                         </button>
                     </div>
@@ -246,13 +248,13 @@ Bob: Hi Alice, how are you today?"></textarea>
                     <div class="card">
                         <h2 style="margin-bottom:16px; font-size: 1.1rem;">Voice Changer (S2S)</h2>
                         <div class="control-group">
-                            <span class="label">Source Audio</span>
+                            <label class="label">Source Audio</label>
                             <button class="btn btn-secondary" style="width:100%" id="s2s-record-btn">
                                 <i class="fas fa-circle"></i> Record Audio
                             </button>
                         </div>
                         <div class="control-group">
-                            <span class="label">Target Voice</span>
+                            <label class="label" for="s2s-target-voice">Target Voice</label>
                             <select id="s2s-target-voice" class="btn btn-secondary btn-sm" style="width:100%"></select>
                         </div>
                         <div class="control-group">
@@ -261,7 +263,7 @@ Bob: Hi Alice, how are you today?"></textarea>
                                 <span class="label" style="margin:0;">Preserve Prosody (Expressive)</span>
                             </label>
                         </div>
-                        <button class="btn btn-primary" style="width:100%" onclick="startVoiceChanger()">
+                        <button class="btn btn-primary" style="width:100%" onclick="startVoiceChanger(this)">
                             <i class="fas fa-arrows-rotate"></i> Change Voice
                         </button>
                     </div>
