🎨 Palette: Polish navigation, task monitoring, and asset library interactions
This PR implements several micro-UX and accessibility improvements:
- Fixes malformed HTML in sidebar navigation.
- Synchronizes Live Task Monitors across all views using class-based selectors and querySelectorAll.
- Expands background task polling to all relevant production views.
- Adds loading indicators and drag-over visual feedback to the Asset Library.
- Enhances accessibility with ARIA labels and roles for icon buttons and progress bars.
- Ensures empty states in grid layouts span the full width.

--- a/src/static/index.html
+++ b/src/static/index.html
@@ -29,10 +29,10 @@
                 <button class="nav-item" onclick="switchView('dubbing')" aria-pressed="false">
                     <i class="fas fa-language" aria-hidden="true"></i> Dubbing & S2S
                 </button>
-                <button class="nav-item" onclick="switchView('system')" aria-pressed="false">
                 <button class="nav-item" onclick="switchView('assets')" aria-pressed="false">
                     <i class="fas fa-folder-open" aria-hidden="true"></i> Asset Library
                 </button>
+                <button class="nav-item" onclick="switchView('system')" aria-pressed="false">
                     <i class="fas fa-microchip" aria-hidden="true"></i> System
                 </button>
             </nav>
@@ -255,7 +255,7 @@ Bob: Hi Alice, how are you today?"></textarea>
                         </div>
                         <button class="btn btn-secondary btn-sm" onclick="refreshTasks()"><i class="fas fa-sync"></i> Refresh</button>
                     </div>
-                    <div id="task-monitor-list" style="display:flex; flex-direction:column; gap:12px;">
+                    <div class="js-task-monitor-list" style="display:flex; flex-direction:column; gap:12px;">
                         <div class="card" style="border-style:dashed; opacity:0.6; text-align:center;">No active tasks</div>
                     </div>
                 </div>
@@ -343,7 +343,7 @@ Bob: Hi Alice, how are you today?"></textarea>
                         </div>
                         <button class="btn btn-secondary btn-sm" onclick="refreshTasks()"><i class="fas fa-sync"></i> Refresh</button>
                     </div>
-                    <div id="task-monitor-list" style="display:flex; flex-direction:column; gap:12px;">
+                    <div class="js-task-monitor-list" style="display:flex; flex-direction:column; gap:12px;">
                         <div class="card" style="border-style:dashed; opacity:0.6; text-align:center;">No active tasks</div>
                     </div>
                 </div>
@@ -382,7 +382,7 @@ Bob: Hi Alice, how are you today?"></textarea>
                         </div>
                         <button class="btn btn-secondary btn-sm" onclick="refreshTasks()"><i class="fas fa-sync"></i> Refresh</button>
                     </div>
-                    <div id="task-monitor-list" style="display:flex; flex-direction:column; gap:12px;">
+                    <div class="js-task-monitor-list" style="display:flex; flex-direction:column; gap:12px;">
                         <div class="card" style="border-style:dashed; opacity:0.6; text-align:center;">No active tasks</div>
                     </div>
                 </div>
